aml-syntax/src/snapshots/aml_syntax__parser__tests__border_with_no_children.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - Container:
      kind: Border
      children: []
      location:
        start_byte: 0
        end_byte: 6
      attributes: []
      original: border
variables: {}
scopes:
  - variables: []
    parent: ~
