aml-syntax/src/snapshots/aml_syntax__parser__tests__component.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - Component:
      name:
        Identifier:
          value: name
          location:
            start_byte: 1
            end_byte: 5
      location:
        start_byte: 0
        end_byte: 5
      attributes: []
      original: "@name"
variables: {}
scopes:
  - variables: []
    parent: ~
