aml-syntax/src/snapshots/aml_syntax__parser__tests__component_slot.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - ComponentSlot:
      name:
        Identifier:
          value: children
          location:
            start_byte: 1
            end_byte: 9
      location:
        start_byte: 0
        end_byte: 9
      original: $children
variables: {}
scopes:
  - variables: []
    parent: ~
