aml-syntax/src/snapshots/aml_syntax__parser__tests__hstack_with_children.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - Container:
      kind: HStack
      children:
        - Text:
            values:
              - String:
                  value: "\"Hello\""
                  location:
                    start_byte: 17
                    end_byte: 24
            attributes: []
            children: []
            text: "text \"Hello\""
            location:
              start_byte: 12
              end_byte: 24
            keyword:
              start_byte: 12
              end_byte: 16
      location:
        start_byte: 1
        end_byte: 24
      attributes: []
      original: "hstack\n    text \"Hello\""
      keyword:
        start_byte: 1
        end_byte: 7
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
