aml-syntax/src/snapshots/aml_syntax__parser__tests__parser.snap
---
source: aml-syntax/src/parser.rs
expression: ast
---
nodes:
  - Text:
      value:
        String:
          value:
            start_byte: 7
            end_byte: 14
          text: "\"Hello\""
      attributes: []
      children:
        - Span:
            value:
              String:
                value:
                  start_byte: 24
                  end_byte: 31
                text: "\"World\""
            attributes: []
            location:
              start_byte: 19
              end_byte: 23
            text: span
      location:
        start_byte: 2
        end_byte: 6
      text: text
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
